--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,17 +79,16 @@ prepare_postgrest_hafah_image:
     HAFAH_IMAGE_NAME: $REGISTRY/postgrest-instance:$CI_COMMIT_SHORT_SHA
     USE_POSTGREST: 1
 
-patterns_tests:
+.patterns_tests:
   extends: .docker_image_builder_job
   stage: test
   variables:
     AH_ENDPOINT: hafah_app:$HAFAH_PORT
     FF_NETWORK_PER_BUILD: 1
     PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/test_tools/package"
+    HAFAH_IMAGE: ""
 
   needs:
-    - job: prepare_python_hafah_image
-      artifacts: true
     - job: prepare_haf_image
       artifacts: true
 
@@ -97,10 +96,12 @@ patterns_tests:
     - name: $HAF_IMAGE_NAME
       alias: haf-instance
 
-    - name: $HAFAH_IMAGE_NAME
+    - name: $HAFAH_IMAGE
       alias: hafah_app
 
   before_script:
+    - echo "HAfAH image name $HAFAH_IMAGE"
+    - echo "HAF image name $HAF_IMAGE_NAME"
     - apk update && apk add bash git ca-certificates curl build-base python3-dev
     - python3 -m ensurepip
     - pip3 install tox
@@ -127,7 +128,29 @@ patterns_tests:
     - public-runner-docker
     - hived-for-tests
 
-comparison_tests:
+python_patterns_tests:
+  extends: .patterns_tests
+
+  needs:
+    - !reference [.patterns_tests, needs]
+    - job: prepare_python_hafah_image
+      artifacts: true
+
+  variables:
+    HAFAH_IMAGE: $HAFAH_IMAGE_NAME
+
+postgrest_patterns_tests:
+  extends: .patterns_tests
+
+  needs:
+    - !reference [.patterns_tests, needs]
+    - job: prepare_postgrest_hafah_image
+      artifacts: true
+
+  variables:
+    HAFAH_IMAGE: $HAFAH_IMAGE_NAME
+
+.comparison_tests:
   extends: .docker_image_builder_job
   stage: test
   variables:
@@ -135,10 +158,9 @@ comparison_tests:
     HIVED_ENDPOINT: hived-instance:8090
     FF_NETWORK_PER_BUILD: 1
     PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/test_tools/package"
+    HAFAH_IMAGE: ""
 
   needs:
-    - job: prepare_python_hafah_image
-      artifacts: true
     - job: prepare_haf_image
       artifacts: true
     - job: prepare_hived_image
@@ -148,7 +170,7 @@ comparison_tests:
     - name: $HAF_IMAGE_NAME
       alias: haf-instance
 
-    - name: $HAFAH_IMAGE_NAME
+    - name: $HAFAH_IMAGE
       alias: hafah_app
 
     - name: $HIVED_IMAGE_NAME
@@ -182,3 +204,25 @@ comparison_tests:
   tags:
     - public-runner-docker
     - hived-for-tests
+
+python_comparison_tests:
+  extends: .comparison_tests
+
+  needs:
+    - !reference [.comparison_tests, needs]
+    - job: prepare_python_hafah_image
+      artifacts: true
+
+  variables:
+    HAFAH_IMAGE: $HAFAH_IMAGE_NAME
+
+postgrest_comparison_tests:
+  extends: .comparison_tests
+
+  needs:
+    - !reference [.comparison_tests, needs]
+    - job: prepare_postgrest_hafah_image
+      artifacts: true
+
+  variables:
+    HAFAH_IMAGE: $HAFAH_IMAGE_NAME
