--- a/postgrest.conf
+++ b/postgrest.conf
@@ -1,4 +1,4 @@
 db-uri = "postgres://haf_admin:haf_admin@localhost:5432/haf_block_log"
-db-schema = "hafah_endpoints, hafah_api_v1, hafah_api_v2"
+db-schema = "hafah_endpoints"
 db-anon-role = "hafah_user"
 db-root-spec = "home"
