--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ variables:
   REGISTRY: registry.gitlab.syncad.com/hive/hafah
   HAFAH_PORT: 6543
   HAF_POSTGRES_URL: postgresql://haf_app_admin@haf-instance:5432/haf_block_log
+  CACHED_BENCHMARK_DIR: "$CI_PROJECT_DIR/cached"
 
 include:
   - project: 'hive/haf'
@@ -61,6 +62,29 @@ prepare_haf_image:
   artifacts:
     reports:
       dotenv: docker_image_name.env
+    expire_in: 6 hours
+
+  tags:
+    - public-runner-docker
+    - hived-for-tests
+
+prepare_benchmark_environ:
+  extends: .docker_image_builder_job
+  stage: build
+
+  script:
+    - mkdir -p $CACHED_BENCHMARK_DIR && cd $CACHED_BENCHMARK_DIR
+    - chmod a+x $CI_PROJECT_DIR/scripts/setup_jmeter.bash && $CI_PROJECT_DIR/scripts/setup_jmeter.bash
+    - chmod a+x $CI_PROJECT_DIR/scripts/setup_m2u.bash && $CI_PROJECT_DIR/scripts/setup_m2u.bash
+
+  cache:
+    key: bench-tools
+    paths:
+      - "$CACHED_BENCHMARK_DIR/"
+
+  artifacts:
+    paths:
+      - "$CACHED_BENCHMARK_DIR/"
     expire_in: 6 hours
 
   tags:
@@ -221,6 +245,73 @@ postgrest_comparison_tests:
 
   needs:
     - !reference [.comparison_tests, needs]
+    - job: prepare_postgrest_hafah_image
+      artifacts: true
+
+  variables:
+    HAFAH_IMAGE: $HAFAH_IMAGE_NAME
+
+.benchmark_tests:
+  extends: .docker_image_builder_job
+  stage: test
+  variables:
+    FF_NETWORK_PER_BUILD: 1
+    PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/test_tools/package"
+    HAFAH_IMAGE: ""
+    CACHE_DIR: "$CI_PROJECT_DIR/cached"
+
+  needs:
+    - job: prepare_haf_image
+      artifacts: true
+    - job: prepare_benchmark_environ
+      artifacts: true
+
+  services:
+    - name: $HAF_IMAGE_NAME
+      alias: haf-instance
+
+    - name: $HAFAH_IMAGE
+      alias: hafah_app
+
+  before_script:
+    - apk update && apk add bash ca-certificates wget unzip openjdk11-jre openjdk11-jdk maven git python3 py3-pip
+    - pip3 install --user prettytable
+
+  script:
+    - source $CACHED_BENCHMARK_DIR/jmeter/activate
+    - source $CACHED_BENCHMARK_DIR/m2u/activate
+    - $JMETER --version
+    - /usr/bin/python3 $CI_PROJECT_DIR/tests/performance_test.py -a hafah_app -p $HAFAH_PORT --no-launch -c perf_5M_heavy.csv -j $JMETER -d $CI_PROJECT_DIR/wdir
+    - $M2U --input wdir/raw_jmeter_report.xml --output wdir/jmeter_junit_report.xml
+
+  artifacts:
+    when: always
+    reports:
+      junit: $CI_PROJECT_DIR/wdir/jmeter_junit_report.xml
+    paths:
+      - $CI_PROJECT_DIR/wdir/
+    when: always
+    expire_in: 6 hours
+  tags:
+    - public-runner-docker
+    - hived-for-tests
+
+python_benchmark_tests:
+  extends: .benchmark_tests
+
+  needs:
+    - !reference [.benchmark_tests, needs]
+    - job: prepare_python_hafah_image
+      artifacts: true
+
+  variables:
+    HAFAH_IMAGE: $HAFAH_IMAGE_NAME
+
+postgrest_benchmark_tests:
+  extends: .benchmark_tests
+
+  needs:
+    - !reference [.benchmark_tests, needs]
     - job: prepare_postgrest_hafah_image
       artifacts: true
 
