Removed 're-start' job, updated 'setup_db.sh' #26

--- a/postgrest.conf
+++ b/postgrest.conf
@@ -1,4 +1,5 @@
-db-uri = "postgres://haf_admin:haf_admin@localhost:5432/haf_block_log"
+db-uri = "postgres://hive:hive@localhost:5432/haf_block_log"
 db-schema = "hafah_endpoints"
 db-anon-role = "hafah_user"
 db-root-spec = "home"
+server-port = "3000"
