Updated '.gitlab-ci.yml' for new style call API tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,6 +87,7 @@ prepare_postgrest_hafah_image:
     FF_NETWORK_PER_BUILD: 1
     PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/test_tools/package"
     HAFAH_IMAGE: ""
+    TEST_NAMES: ""
 
   needs:
     - job: prepare_haf_image
@@ -110,7 +111,7 @@ prepare_postgrest_hafah_image:
     - pip3 install -r $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests/requirements.txt
     # run pattern tests
     - cd $CI_PROJECT_DIR/haf/hive/tests/api_tests/pattern_tests
-    - ./run_tests.sh $AH_ENDPOINT `git rev-parse --show-toplevel`
+    - ./run_tests.sh $AH_ENDPOINT `git rev-parse --show-toplevel` $TEST_NAMES
 
   artifacts:
     when: always
@@ -149,6 +150,18 @@ postgrest_patterns_tests:
 
   variables:
     HAFAH_IMAGE: $HAFAH_IMAGE_NAME
+
+new_style_postgrest_patterns_tests:
+  extends: .patterns_tests
+
+  needs:
+    - !reference [.patterns_tests, needs]
+    - job: prepare_postgrest_hafah_image
+      artifacts: true
+
+  variables:
+    HAFAH_IMAGE: $HAFAH_IMAGE_NAME
+    TEST_NAMES: "not get_transaction_hex and not account_history_api and not condenser_api and (get_transaction or get_account_history or enum_virtual_ops or get_ops_in_block)"
 
 .comparison_tests:
   extends: .docker_image_builder_job
