--- a/postgrest.conf
+++ b/postgrest.conf
@@ -1,4 +1,4 @@
-db-uri = "postgresql://hive@/haf_block_log"
+db-uri = "postgresql://haf_app_admin@/haf_block_log"
 db-schema = "hafah_endpoints"
 db-anon-role = "hafah_user"
 db-root-spec = "home"
