Checked out hive submodule with 'custom_update_request()' #26

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,7 +87,7 @@ prepare_postgrest_hafah_image:
     FF_NETWORK_PER_BUILD: 1
     PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/test_tools/package"
     HAFAH_IMAGE: ""
-    TEST_NAMES: ""
+    CALL_TYPE: "legacy_style_call"
 
   needs:
     - job: prepare_haf_image
@@ -111,7 +111,7 @@ prepare_postgrest_hafah_image:
     - pip3 install -r $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests/requirements.txt
     # run pattern tests
     - cd $CI_PROJECT_DIR/haf/hive/tests/api_tests/pattern_tests
-    - ./run_tests.sh $AH_ENDPOINT `git rev-parse --show-toplevel` $TEST_NAMES
+    - ./run_tests.sh $AH_ENDPOINT `git rev-parse --show-toplevel` $CALL_TYPE
 
   artifacts:
     when: always
@@ -161,7 +161,7 @@ new_style_postgrest_patterns_tests:
 
   variables:
     HAFAH_IMAGE: $HAFAH_IMAGE_NAME
-    TEST_NAMES: "hafah_api"
+    CALL_TYPE: "direct_call_hafah"
 
 .comparison_tests:
   extends: .docker_image_builder_job
