--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,7 @@ include:
   tags:
     - public-runner-docker
     - hived-for-tests
+    - hive-builder-4 
 
 .prepare_haf_image:
   extends: .prepare_haf_data_5m_image
@@ -42,7 +43,7 @@ include:
     REGISTRY_PASS: $CI_IMG_BUILDER_PASSWORD
 
   tags:
-    - pl-runner-docker
+    - hive-builder-4
 
 .prepare_hafah_image:
   extends: .docker_image_builder_job
@@ -52,11 +53,20 @@ include:
     USE_POSTGREST: 0
 
   script:
+    - mkdir -p saved_docker_images
+    - ls -l saved_docker_images
     - echo $HAFAH_CI_IMG_BUILDER_PASSWORD | docker login -u $HAFAH_CI_IMG_BUILDER_USER $REGISTRY --password-stdin
     - docker info
-    - docker image ls
+    - docker image ls --digests
+    - echo -e "\e[0Ksection_start:`date +%s`:docker_build_section\r\e[0KDocker build"
     - docker build --build-arg USE_POSTGREST=$USE_POSTGREST --build-arg HTTP_PORT=$HAFAH_PORT --build-arg POSTGRES_URL="$HAF_POSTGRES_URL" --target=instance -t $HAFAH_IMAGE_NAME -f Dockerfile . 
-    #- docker push $HAFAH_IMAGE_NAME
+    - echo -e "\e[0Ksection_end:`date +%s`:docker_build_section\r\e[0K"
+    - echo -e "\e[0Ksection_start:`date +%s`:docker_save_section\r\e[0KDocker save"
+    - docker save -o saved_docker_images/hafah_docker_image.tar $HAFAH_IMAGE_NAME
+    - echo -e "\e[0Ksection_end:`date +%s`:docker_save_section\r\e[0K"
+    - echo -e "\e[0Ksection_start:`date +%s`:docker_push_section\r\e[0KDocker push"
+    - docker push $HAFAH_IMAGE_NAME
+    - echo -e "\e[0Ksection_end:`date +%s`:docker_push_section\r\e[0K"
     - echo "HAFAH_IMAGE_NAME=$HAFAH_IMAGE_NAME" > docker_image_name.env
 
   artifacts:
@@ -64,8 +74,13 @@ include:
       dotenv: docker_image_name.env
     expire_in: 6 hours
 
+  cache:
+    key: "$CI_PIPELINE_ID"
+    paths:
+    - saved_docker_images
+
   tags:
-    - pl-runner-docker
+    - hive-builder-4
 
 prepare_python_hafah_image:
   extends: .prepare_hafah_image
@@ -88,11 +103,18 @@ image_checker:
     PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/test_tools/package"
     HAFAH_IMAGE: ""
 
+    DOCKER_BUILDKIT: 1
+    DOCKER_DRIVER: overlay2
+    DOCKER_TLS_CERTDIR: "/certs"
+
   needs:
     - job: prepare_python_hafah_image
       artifacts: true
 
   services:
+    - docker:20.10.10-dind
+    - name: $HAF_IMAGE_NAME
+      alias: haf-instance
     - name: $HAFAH_IMAGE_NAME
       alias: hafah_app
 
@@ -101,8 +123,15 @@ image_checker:
 
   script:
     - echo "HAfAH image name $HAFAH_IMAGE_NAME"
+    - ls -l /etc/docker/daemon.json || true
+    - cat /etc/docker/daemon.json || true
+    - ls -l saved_docker_images
     - docker info
-    - docker image ls -a
+    - docker image ls -a --digests
+    - echo -e "\e[0Ksection_start:`date +%s`:docker_load_section\r\e[0KDocker load"
+    - docker load -i saved_docker_images/hafah_docker_image.tar
+    - echo -e "\e[0Ksection_end:`date +%s`:docker_load_section\r\e[0K"
+    - docker image ls -a --digests
 
   artifacts:
     when: always
@@ -116,8 +145,14 @@ image_checker:
     - "$CI_PROJECT_DIR/haf/hive/tests/tests_api/hived/workdir_*"
     when: always
     expire_in: 6 hours
+
+  cache:
+    key: "$CI_PIPELINE_ID"
+    paths:
+    - saved_docker_images
+
   tags:
-    - pl-runner-docker
+    - hive-builder-4
 
 
 .patterns_tests:
