rename all instances of sps into dhf

--- a/hived/pyresttest_api_tests/condenser_api/dhf_via_condenser_test.yaml
+++ b/hived/pyresttest_api_tests/condenser_api/dhf_via_condenser_test.yaml
@@ -1,6 +1,6 @@
 ---
 - config:
-  - testset: "SPS via Condenser API Tests"
+  - testset: "DHF via Condenser API Tests"
   - api: &api "condenser_api"
   - variable_binds:
     - api: *api
