--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -323,12 +323,7 @@ postgrest_comparison_tests:
       - source $CACHED_BENCHMARK_DIR/jmeter/activate
       - source $CACHED_BENCHMARK_DIR/m2u/activate
       - $JMETER --version
-      - /usr/bin/python3 $CI_PROJECT_DIR/haf/hive/tests/tests_api/benchmarks/benchmark.py     \
-          -a hafah_app -p $HAFAH_PORT                                                         \
-          -c perf_5M_heavy.csv                                                                \
-          -j $JMETER                                                                          \
-          -d $CI_PROJECT_DIR/wdir                                                             \
-          -n $API_FOR_TESTING
+      - /usr/bin/python3 $CI_PROJECT_DIR/haf/hive/tests/tests_api/benchmarks/benchmark.py -a hafah_app -p $HAFAH_PORT -c perf_5M_heavy.csv -j $JMETER -d $CI_PROJECT_DIR/wdir -n $API_FOR_TESTING
       - $M2U --input wdir/raw_jmeter_report.xml --output wdir/jmeter_junit_report.xml
 
   artifacts:
@@ -343,7 +338,7 @@ postgrest_comparison_tests:
     - public-runner-docker
     - hived-for-tests
 
-python_benchmark_tests:
+python_account_history_benchmark_tests:
   extends: .benchmark_tests
 
   needs:
@@ -354,7 +349,20 @@ python_benchmark_tests:
   variables:
     HAFAH_IMAGE: $HAFAH_IMAGE_NAME
 
-postgrest_benchmark_tests:
+
+postgrest_block_api_benchmark_tests:
+  extends: .benchmark_tests
+
+  needs:
+    - !reference [.benchmark_tests, needs]
+    - job: prepare_postgrest_hafah_image
+      artifacts: true
+
+  variables:
+    HAFAH_IMAGE: $HAFAH_IMAGE_NAME
+    API_FOR_TESTING: blocks_api
+
+postgrest_account_history_benchmark_tests:
   extends: .benchmark_tests
 
   needs:
