--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ variables:
   HAFAH_PORT: 6543
   HAF_POSTGRES_URL: postgresql://haf_app_admin@haf-instance:5432/haf_block_log
   CACHED_BENCHMARK_DIR: "$CI_PROJECT_DIR/cached"
+  BENCHMARK_SOURCE_DIR: "$CI_PROJECT_DIR/haf/hive/tests/tests_api/benchmarks"
 
 include:
   - project: 'hive/haf'
@@ -77,8 +78,8 @@ prepare_benchmark_environ:
 
   script:
     - mkdir -p $CACHED_BENCHMARK_DIR && cd $CACHED_BENCHMARK_DIR
-    - chmod a+x $CI_PROJECT_DIR/scripts/setup_jmeter.bash && $CI_PROJECT_DIR/scripts/setup_jmeter.bash
-    - chmod a+x $CI_PROJECT_DIR/scripts/setup_m2u.bash && $CI_PROJECT_DIR/scripts/setup_m2u.bash
+    - chmod a+x $BENCHMARK_SOURCE_DIR/setup_jmeter.bash && $BENCHMARK_SOURCE_DIR/setup_jmeter.bash
+    - chmod a+x $BENCHMARK_SOURCE_DIR/setup_m2u.bash && $BENCHMARK_SOURCE_DIR/setup_m2u.bash
 
   cache:
     key: bench-tools
@@ -281,6 +282,7 @@ postgrest_comparison_tests:
   stage: test
   variables:
     FF_NETWORK_PER_BUILD: 1
+    API_FOR_TESTING: "account_history_api" # alternatively: blocks_api
     PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/test_tools/package"
     HAFAH_IMAGE: ""
     CACHE_DIR: "$CI_PROJECT_DIR/cached"
@@ -306,12 +308,16 @@ postgrest_comparison_tests:
     - pip3 install --user prettytable
 
   script:
-    - |
-      source $CACHED_BENCHMARK_DIR/jmeter/activate
-      source $CACHED_BENCHMARK_DIR/m2u/activate
-      $JMETER --version
-      /usr/bin/python3 $CI_PROJECT_DIR/tests/performance_test.py -a hafah_app -p $HAFAH_PORT --no-launch -c perf_5M_heavy.csv -j $JMETER -d $CI_PROJECT_DIR/wdir
-      $M2U --input wdir/raw_jmeter_report.xml --output wdir/jmeter_junit_report.xml
+      - source $CACHED_BENCHMARK_DIR/jmeter/activate
+      - source $CACHED_BENCHMARK_DIR/m2u/activate
+      - $JMETER --version
+      - /usr/bin/python3 $CI_PROJECT_DIR/haf/hive/tests/tests_api/benchmarks/benchmark.py     \
+          -a hafah_app -p $HAFAH_PORT                                                         \
+          -c perf_5M_heavy.csv                                                                \
+          -j $JMETER                                                                          \
+          -d $CI_PROJECT_DIR/wdir                                                             \
+          -n $API_FOR_TESTING
+      - $M2U --input wdir/raw_jmeter_report.xml --output wdir/jmeter_junit_report.xml
 
   artifacts:
     when: always
